--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "fable-utils": "1.0.6",
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4"
+  },
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
